--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aviraj's portfolio showcasing web development projects and skills" />
+    <meta name="keywords" content="Aviraj, portfolio, web development, projects, skills" />
+    <meta name="author" content="Aviraj Paul" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://avirajpaul.vercel.app/" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aviraj's Portfolio Site</title>
+    <title>Aviraj Paul - Web Developer Portfolio</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Aviraj Paul",
+        "url": "https://avirajpaul.vercel.app/",
+        "jobTitle": "Web Developer",
+        "sameAs": [
+          "https://github.com/avirajpaul5",
+          "https://www.linkedin.com/in/aviraj-paul/"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
