--- a/index.html
+++ b/index.html
@@ -3,16 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Aviraj's portfolio showcasing web development projects and skills" />
-    <meta name="keywords" content="Aviraj, portfolio, web development, projects, skills" />
+    <meta
+      name="description"
+      content="Aviraj's portfolio showcasing web development projects and skills"
+    />
+    <meta
+      name="keywords"
+      content="Aviraj, portfolio, web development, projects, skills"
+    />
     <meta name="author" content="Aviraj Paul" />
     <meta name="robots" content="index, follow" />
+    <meta name="color-scheme" content="light dark" />
     <link rel="canonical" href="https://avirajpaul.vercel.app/" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <title>Aviraj Paul - Web Developer Portfolio</title>
+    <!-- Prevent flash of wrong theme -->
+    <script>
+      (function () {
+        // Check for saved theme preference or use the system preference
+        const savedTheme = localStorage.getItem("portfolio-theme-preference");
+        const prefersDark =
+          window.matchMedia &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches;
+        const theme = savedTheme || (prefersDark ? "dark" : "light");
+
+        // Apply the theme class early to prevent flash
+        document.documentElement.classList.add(theme);
+      })();
+    </script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
