--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Aviraj Paul - Web Developer Portfolio</title>
     <!-- Prevent flash of wrong theme -->
     <script>
